--- a/public/dallas-tx/index.html
+++ b/public/dallas-tx/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Poison Ivy Removal in Dallas, TX</title>
-  <meta name="description" content="Poison ivy removal guidance: how pros kill roots, limit regrowth, and what affects cost in Dallas, TX." />
+  <meta name="description" content="Poison ivy removal pricing, what affects cost, and what a pro handles — for Dallas, TX." />
   <link rel="canonical" href="/dallas-tx/" />
   <style>
 :root {
@@ -235,7 +235,7 @@ footer {
 
 <div class="topbar">
   <div class="topbar-inner">
-    <a class="brand" href="/">Poison Ivy Removal Company</a>
+    <a class="brand" href="/">Poison Ivy Removal Service</a>
     <div class="topbar-actions">
       <a class="toplink" href="/">Home</a>
       <a class="btn btn-top" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
@@ -247,7 +247,7 @@ footer {
   <div class="wrap hero">
     <h1>Poison Ivy Removal in Dallas, TX</h1>
     <p class="sub">
-      Practical guidance on removing poison ivy, preventing regrowth, and what typically affects the total cost.
+      Clear guidance on safe removal, long-term control, and typical pricing for yard work.
     </p>
     <a class="btn" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
   </div>
@@ -256,59 +256,56 @@ footer {
 <main class="wrap">
   <div class="grid">
     <section class="card">
-      <div class="pill">Local removal guide</div>
+      <div class="pill">Local cost guide</div>
 
       <div class="img" style="margin-top:12px;">
-        <img src="/assets/front-door.jpg" alt="Exterior entryway and surrounding landscaping" loading="lazy" />
+        <img src="/assets/poison-ivy.jpg" alt="Yard vegetation detail" loading="lazy" />
       </div>
 
       <h2>How to identify poison ivy</h2>
       <p>
-        Poison ivy often grows as a ground cover or climbing vine with clusters of three leaflets.
-        Because look-alikes exist, identification usually focuses on growth pattern, leaflet shape, and where the plant is spreading.
+        Poison ivy often grows as a vine or low shrub. It can climb trees, fences, and walls.
+        Many people remember the “leaves of three” rule, but leaf shape can change across seasons.
       </p>
 
-      <h2>What makes poison ivy come back</h2>
+      <h2>How poison ivy spreads in a yard</h2>
       <p>
-        Regrowth is common when roots remain, vines re-sprout from buried stems, or birds spread seeds.
-        A lasting plan usually includes removing visible growth and treating the root system over time.
+        Poison ivy spreads through roots, runners, and seeds. Small patches can turn into larger areas over time.
+        Cutting vines can also trigger new growth if roots stay in the ground.
       </p>
 
-      <h2>Manual removal vs herbicide treatments</h2>
+      <h2>Best way to remove poison ivy safely</h2>
       <p>
-        Manual removal can work for small patches if done carefully, but it can be labor-intensive.
-        Targeted herbicide treatments may be more effective for established vines—especially when the goal is permanent control.
+        A safe plan reduces skin contact and limits spread. Crews use protective gear, control the work area,
+        and remove plant material without dragging it across the yard.
+      </p>
+      <p class="muted">
+        Note: If you have a rash or exposure concerns, talk with a medical professional. This page focuses on yard removal.
       </p>
 
-      <h2>How to kill poison ivy roots permanently</h2>
+      <h2>Killing poison ivy roots for long-term control</h2>
       <p>
-        “Permanent” results typically come from addressing roots and repeating control steps as needed.
-        Timing, coverage, and follow-up matter—particularly for mature vines climbing fences, trees, or structures.
+        Long-term results depend on what happens below the surface. If roots remain, poison ivy can return.
+        A pro can choose a method that targets regrowth and fits the site.
       </p>
 
-      <h2>Protecting nearby plants, pets, and kids</h2>
+      <h2>What to do with poison ivy vines and debris</h2>
       <p>
-        A careful approach helps protect nearby plants and reduces exposure risk for pets and kids.
-        Pros often use targeted application and containment so the treatment stays where it’s needed.
+        Bag and handle debris as contaminated plant material. Do not burn it.
+        Tools, gloves, and clothing can also carry oil and should be cleaned after the job.
       </p>
 
-      <h2>Cleanup and disposal to avoid spreading oils</h2>
+      <h2>When to hire professional poison ivy removal</h2>
       <p>
-        Oils from the plant can transfer to gloves, tools, clothing, and yard waste.
-        Cleanup usually includes bagging debris properly, cleaning tools, and avoiding actions that spread residue around the property.
-      </p>
-
-      <h2>When to hire a professional</h2>
-      <p>
-        Professional help is most useful when vines are extensive, climbing high, mixed into landscaping,
-        or when you need a plan that reduces regrowth and limits exposure risk.
+        Professional poison ivy removal makes sense for large patches, hard-to-reach areas, and properties with
+        repeat regrowth. It also helps when the plant has climbed trees or spread along fences.
       </p>
 
       <hr />
 
       <h2>Cost estimate</h2>
       <p class="muted">
-        Estimated service cost in Dallas, TX (many projects):
+        Estimated project pricing in Dallas, TX (most jobs):
       </p>
 
       <table class="table" aria-label="Cost estimate table">
@@ -322,14 +319,19 @@ footer {
         <tbody>
           <tr>
             <td>Poison Ivy Removal</td>
-            <td>$250–$750</td>
-            <td>Area size, vine maturity, access, disposal needs, follow-up visits</td>
+            <td>$250–$800</td>
+            <td>Patch size, access, vines in trees, disposal, repeat visits</td>
           </tr>
         </tbody>
       </table>
 
       <p class="muted" style="margin-top:10px;">
-        These are typical ranges—actual quotes vary by site conditions and how established the growth is.
+        These are typical ranges. A quote depends on site conditions and the removal method.
+      </p>
+
+      <h2>Service area</h2>
+      <p>
+        We serve homeowners and property managers across the metro area. City pages provide local context and pricing ranges.
       </p>
     </section>
   </div>
@@ -337,11 +339,11 @@ footer {
 
 <footer>
   <div class="footer-card">
-    <h2>Ready to move forward?</h2>
-    <p>Ready to move forward? Request a free quote</p>
+    <h2>Ready to move forward? Request a free quote</h2>
+    <p>Tell us where the poison ivy is and how large the area is. We’ll reply with next steps.</p>
     <a class="btn" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
     <div class="small">
-      © Poison Ivy Removal Company. All rights reserved.
+      © Poison Ivy Removal Service. All rights reserved.
       <div class="links" style="margin-top:10px;">
         <a href="/">Home</a>
       </div>
