--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Poison Ivy Removal: How to Kill It Permanently</title>
-  <meta name="description" content="Learn how poison ivy is removed, what kills roots, what affects cost, and find local estimates by city." />
+  <title>Poison Ivy Removal Cost: Typical Pricing &amp; What Affects It</title>
+  <meta name="description" content="Typical poison ivy removal pricing, what affects the total, and local pages by city." />
   <link rel="canonical" href="/" />
   <style>
 :root {
@@ -235,7 +235,7 @@ footer {
 
 <div class="topbar">
   <div class="topbar-inner">
-    <a class="brand" href="/">Poison Ivy Removal Company</a>
+    <a class="brand" href="/">Poison Ivy Removal Service</a>
     <div class="topbar-actions">
       <a class="toplink" href="/">Home</a>
       <a class="btn btn-top" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
@@ -245,10 +245,10 @@ footer {
 
 <header>
   <div class="wrap hero">
-    <h1>Poison Ivy Removal: How to Kill It Permanently</h1>
+    <h1>Poison Ivy Removal Cost: Typical Pricing &amp; What Affects It</h1>
     <p class="sub">
-      Most poison ivy removal projects fall between $250 and $750, depending on how established the growth is.
-      Choose your city for local estimates.
+      Many jobs fall between $250 and $800. Price depends on patch size, access,
+      and whether vines climbed trees or fences.
     </p>
     <a class="btn" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
   </div>
@@ -259,37 +259,28 @@ footer {
     <div class="pill">Nationwide overview</div>
 
     <div class="img" style="margin-top:12px;">
-      <img src="/assets/front-door.jpg" alt="Exterior entryway and surrounding landscaping" loading="lazy" />
+      <img src="/assets/poison-ivy.jpg" alt="Yard vegetation detail" loading="lazy" />
     </div>
 
-    <h2>What kills poison ivy permanently?</h2>
+    <h2>Poison ivy removal vs poison ivy control</h2>
     <p>
-      Long-term control usually means addressing the root system and planning for follow-up.
-      Many properties need more than a single pass—especially where vines are mature or spreading through landscaping beds.
+      Removal focuses on clearing visible growth. Control focuses on reducing regrowth over time.
+      Some sites need both, especially when roots spread under soil.
     </p>
 
-    <h2>Remove poison ivy from your yard safely</h2>
-    <p>
-      Poison ivy can transfer oils onto tools, gloves, clothing, and yard waste.
-      A safe removal plan focuses on containment, careful handling, and cleanup steps that reduce accidental spread.
-    </p>
+    <h2>What affects poison ivy removal cost</h2>
+    <ul>
+      <li><strong>Patch size:</strong> More area means more labor and more debris.</li>
+      <li><strong>Access:</strong> Steep slopes and tight side yards take longer.</li>
+      <li><strong>Vines in trees:</strong> Work becomes slower and needs extra care.</li>
+      <li><strong>Disposal:</strong> Bagging and hauling adds time and fees.</li>
+      <li><strong>Repeat visits:</strong> Some sites need follow-up for regrowth.</li>
+    </ul>
 
-    <h2>Manual removal vs targeted treatments</h2>
+    <h2>How to get rid of poison ivy in your yard</h2>
     <p>
-      Small patches may be manageable with careful manual removal, while established vines often require a more structured approach.
-      Targeted treatments can help reduce regrowth, especially when vines climb fences, trees, or structures.
-    </p>
-
-    <h2>Kill poison ivy without damaging other plants</h2>
-    <p>
-      When poison ivy is mixed into hedges or garden beds, precision matters.
-      Pros often focus on targeted application and site-specific steps to protect nearby plants while controlling the vine.
-    </p>
-
-    <h2>Poison ivy removal cost: what affects the price</h2>
-    <p>
-      Pricing usually depends on the size of the area, how established the vines are, access, disposal needs,
-      and whether follow-up visits are recommended for regrowth control.
+      The goal is to remove plant material and stop roots from coming back.
+      A good plan limits skin contact and keeps contaminated debris contained.
     </p>
 
     <hr />
@@ -325,10 +316,10 @@ footer {
 
 <footer>
   <div class="footer-card">
-    <h2>Ready to move forward?</h2>
-    <p>Ready to move forward? Request a free quote</p>
+    <h2>Ready to move forward? Request a free quote</h2>
+    <p>Share the location and size of the patch. We’ll respond with a simple plan and estimate.</p>
     <a class="btn" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
-    <div class="small">© Poison Ivy Removal Company. All rights reserved.</div>
+    <div class="small">© Poison Ivy Removal Service. All rights reserved.</div>
   </div>
 </footer>
 </body>
