--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Poison Ivy Removal Cost: Typical Pricing &amp; What Affects It</title>
-  <meta name="description" content="Typical poison ivy removal pricing, what affects the total, and local pages by city." />
+  <title>Poison Ivy / English Ivy &amp; Vine Removal Services</title>
+  <meta name="description" content="Poison ivy and ivy vine removal guidance, what affects cost, and local pages by city." />
   <link rel="canonical" href="/" />
   <style>
 :root {
@@ -235,7 +235,7 @@ footer {
 
 <div class="topbar">
   <div class="topbar-inner">
-    <a class="brand" href="/">Poison Ivy Removal Service</a>
+    <a class="brand" href="/">Ivy Removal Company</a>
     <div class="topbar-actions">
       <a class="toplink" href="/">Home</a>
       <a class="btn btn-top" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
@@ -245,10 +245,10 @@ footer {
 
 <header>
   <div class="wrap hero">
-    <h1>Poison Ivy Removal Cost: Typical Pricing &amp; What Affects It</h1>
+    <h1>Poison Ivy / English Ivy &amp; Vine Removal Services</h1>
     <p class="sub">
-      Many jobs fall between $250 and $800. Price depends on patch size, access,
-      and whether vines climbed trees or fences.
+      Ivy spreads through roots and runners. Poison ivy can also trigger a rash after contact.
+      We remove poison ivy, English ivy, and heavy vines and we focus on what makes it come back.
     </p>
     <a class="btn" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
   </div>
@@ -256,37 +256,100 @@ footer {
 
 <main class="wrap">
   <section class="card">
-    <div class="pill">Nationwide overview</div>
+    <div class="pill">Straight answers</div>
 
     <div class="img" style="margin-top:12px;">
-      <img src="/assets/poison-ivy.jpg" alt="Yard vegetation detail" loading="lazy" />
+      <img src="/assets/front-door.jpg" alt="Yard edge and fence line where vines can spread" loading="lazy" />
     </div>
 
-    <h2>Poison ivy removal vs poison ivy control</h2>
     <p>
-      Removal focuses on clearing visible growth. Control focuses on reducing regrowth over time.
-      Some sites need both, especially when roots spread under soil.
+  If ivy has started to spread across your yard, fence, or trees, it can turn into a bigger problem than it looks.
+  It spreads through runners and roots, and it can come back after a quick cut.
+</p>
+<p>
+  Poison ivy also carries urushiol, an oil that can trigger a rash after contact. If anyone in your home reacts to it,
+  you want the plant gone and you want it gone for good.
+</p>
+<p>
+  We remove poison ivy, English ivy, and heavy vines. We focus on the roots, not just the leaves.
+</p>
+
+    <h2>About this service</h2>
+    <p>
+      We remove ivy in yards, along fences, around sheds, and on trees.
+      We aim to clear the plant, reduce regrowth, and keep the work contained.
     </p>
 
-    <h2>What affects poison ivy removal cost</h2>
-    <ul>
-      <li><strong>Patch size:</strong> More area means more labor and more debris.</li>
-      <li><strong>Access:</strong> Steep slopes and tight side yards take longer.</li>
-      <li><strong>Vines in trees:</strong> Work becomes slower and needs extra care.</li>
-      <li><strong>Disposal:</strong> Bagging and hauling adds time and fees.</li>
-      <li><strong>Repeat visits:</strong> Some sites need follow-up for regrowth.</li>
-    </ul>
+    <!-- Homepage H2s are not restricted, but we keep them aligned with the same intent -->
+    <h2>Poison Ivy vs English Ivy: what’s the difference</h2>
+<p>
+  Poison ivy is a native plant that can trigger a rash in many people. English ivy is a different species.
+  It often climbs trees, walls, and fences. Both can spread fast.
+</p>
+<p>
+  A good plan depends on what you have and where it grows. Ground cover needs root removal.
+  Climbing ivy needs careful work so you do not damage bark, siding, or fences.
+</p>
+    <h2>How to identify poison ivy</h2>
+<p>
+  People say “leaves of three,” and that helps, but it is not the only clue.
+  Look for clusters of three leaflets, uneven edges, and vines with small aerial root hairs.
+</p>
+<ul>
+  <li>Three leaflets per leaf cluster</li>
+  <li>Uneven or jagged leaflet edges on many plants</li>
+  <li>Hairy-looking vines on trees or fences</li>
+  <li>Small green flowers in spring on some plants</li>
+  <li>White or yellow berries later in the season</li>
+</ul>
+<p class="muted">
+  If you are not sure what you are seeing, do not handle it with bare skin.
+</p>
+    <h2>How poison ivy spreads and why it comes back</h2>
+<p>
+  Ivy spreads through roots, runners, and seed. A cut vine can still leave roots in the soil.
+  That is why it returns after a simple trim or a quick pull.
+</p>
+<p>
+  Long-term removal means you stop new growth, remove root sections where possible,
+  and monitor the area for regrowth.
+</p>
+    <h2>Can you pull poison ivy yourself?</h2>
+<p>
+  You can pull small patches if you protect your skin and you remove the roots.
+  The risk is exposure to urushiol and missed root pieces that sprout again.
+</p>
+<p>
+  If the plant has spread across a yard, into brush, or up trees, the job gets harder.
+  At that point, many people choose a pro so the work stays contained.
+</p>
+    <h2>Should you spray herbicide first?</h2>
+<p>
+  Many people want to spray first. In many cases, that does not help.
+  It can also spread residue onto tools, gloves, and nearby plants.
+</p>
+<p>
+  A better approach is to keep the area undisturbed until removal day.
+  After that, a pro can decide if targeted treatment makes sense for regrowth.
+</p>
+    <h2>Do landscapers remove poison ivy?</h2>
+<p>
+  Some landscapers remove ivy. Others cut it back or bury it during cleanup.
+  If the roots stay, the plant often returns.
+</p>
+<p>
+  If you hire help, ask how they handle roots, disposal, and follow-up regrowth.
+</p>
 
-    <h2>How to get rid of poison ivy in your yard</h2>
-    <p>
-      The goal is to remove plant material and stop roots from coming back.
-      A good plan limits skin contact and keeps contaminated debris contained.
+    <h2>Typical pricing range</h2>
+    <p class="muted">
+      Many projects fall in the $500–$1500 range. Price depends on spread, access, and height.
     </p>
 
     <hr />
 
-    <h2>Choose your city for local estimates</h2>
-    <p class="muted">City pages use clean URLs that include city + state for clarity.</p>
+    <h2>Choose your city for local pages</h2>
+    <p class="muted">Each city page keeps the same guide and adds a light local note.</p>
 
     <!-- Clean city buttons (grid) -->
     <ul class="city-grid">
@@ -314,12 +377,18 @@ footer {
   </section>
 </main>
 
+
 <footer>
   <div class="footer-card">
-    <h2>Ready to move forward? Request a free quote</h2>
-    <p>Share the location and size of the patch. We’ll respond with a simple plan and estimate.</p>
+    <h2>Ready to move forward?</h2>
+    <p>Ready to move forward? Request a free quote</p>
     <a class="btn" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
-    <div class="small">© Poison Ivy Removal Service. All rights reserved.</div>
+    <div class="small">
+      © Ivy Removal Company. All rights reserved.
+      <div class="links" style="margin-top:10px;">
+        <a href="/">Home</a>
+      </div>
+    </div>
   </div>
 </footer>
 </body>
