--- a/public/indianapolis-in/index.html
+++ b/public/indianapolis-in/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Poison Ivy Removal in Indianapolis, IN</title>
-  <meta name="description" content="Poison ivy removal pricing, what affects cost, and what a pro handles — for Indianapolis, IN." />
+  <meta name="description" content="Poison ivy removal pricing, what affects cost, and what to expect — Indianapolis, IN." />
   <link rel="canonical" href="/indianapolis-in/" />
   <style>
 :root {
@@ -235,7 +235,7 @@ footer {
 
 <div class="topbar">
   <div class="topbar-inner">
-    <a class="brand" href="/">Poison Ivy Removal Service</a>
+    <a class="brand" href="/">Ivy Removal Company</a>
     <div class="topbar-actions">
       <a class="toplink" href="/">Home</a>
       <a class="btn btn-top" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
@@ -247,7 +247,7 @@ footer {
   <div class="wrap hero">
     <h1>Poison Ivy Removal in Indianapolis, IN</h1>
     <p class="sub">
-      Clear guidance on safe removal, long-term control, and typical pricing for yard work.
+      Clear guidance on removal, common pitfalls, and typical pricing. We keep it simple and focus on the roots.
     </p>
     <a class="btn" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
   </div>
@@ -256,94 +256,126 @@ footer {
 <main class="wrap">
   <div class="grid">
     <section class="card">
-      <div class="pill">Local cost guide</div>
+      <div class="pill">Local removal guide</div>
 
       <div class="img" style="margin-top:12px;">
-        <img src="/assets/poison-ivy.jpg" alt="Yard vegetation detail" loading="lazy" />
+        <img src="/assets/door-viewer.jpg" alt="Ivy and vine removal work area" loading="lazy" />
       </div>
 
+      <p>
+  If ivy has started to spread across your yard, fence, or trees, it can turn into a bigger problem than it looks.
+  It spreads through runners and roots, and it can come back after a quick cut. We serve homeowners in Indianapolis, IN and nearby areas.
+</p>
+<p>
+  Poison ivy also carries urushiol, an oil that can trigger a rash after contact. If anyone in your home reacts to it,
+  you want the plant gone and you want it gone for good.
+</p>
+<p>
+  We remove poison ivy, English ivy, and heavy vines. We focus on the roots, not just the leaves.
+</p>
+
+      <h2>Poison Ivy vs English Ivy: what’s the difference</h2>
+<p>
+  Poison ivy is a native plant that can trigger a rash in many people. English ivy is a different species.
+  It often climbs trees, walls, and fences. Both can spread fast.
+</p>
+<p>
+  A good plan depends on what you have and where it grows. Ground cover needs root removal.
+  Climbing ivy needs careful work so you do not damage bark, siding, or fences.
+</p>
       <h2>How to identify poison ivy</h2>
-      <p>
-        Poison ivy often grows as a vine or low shrub. It can climb trees, fences, and walls.
-        Many people remember the “leaves of three” rule, but leaf shape can change across seasons.
-      </p>
+<p>
+  People say “leaves of three,” and that helps, but it is not the only clue.
+  Look for clusters of three leaflets, uneven edges, and vines with small aerial root hairs.
+</p>
+<ul>
+  <li>Three leaflets per leaf cluster</li>
+  <li>Uneven or jagged leaflet edges on many plants</li>
+  <li>Hairy-looking vines on trees or fences</li>
+  <li>Small green flowers in spring on some plants</li>
+  <li>White or yellow berries later in the season</li>
+</ul>
+<p class="muted">
+  If you are not sure what you are seeing, do not handle it with bare skin.
+</p>
+      <h2>How poison ivy spreads and why it comes back</h2>
+<p>
+  Ivy spreads through roots, runners, and seed. A cut vine can still leave roots in the soil.
+  That is why it returns after a simple trim or a quick pull.
+</p>
+<p>
+  Long-term removal means you stop new growth, remove root sections where possible,
+  and monitor the area for regrowth.
+</p>
+      <h2>Can you pull poison ivy yourself?</h2>
+<p>
+  You can pull small patches if you protect your skin and you remove the roots.
+  The risk is exposure to urushiol and missed root pieces that sprout again.
+</p>
+<p>
+  If the plant has spread across a yard, into brush, or up trees, the job gets harder.
+  At that point, many people choose a pro so the work stays contained.
+</p>
+      <h2>Should you spray herbicide first?</h2>
+<p>
+  Many people want to spray first. In many cases, that does not help.
+  It can also spread residue onto tools, gloves, and nearby plants.
+</p>
+<p>
+  A better approach is to keep the area undisturbed until removal day.
+  After that, a pro can decide if targeted treatment makes sense for regrowth.
+</p>
+      <h2>Do landscapers remove poison ivy?</h2>
+<p>
+  Some landscapers remove ivy. Others cut it back or bury it during cleanup.
+  If the roots stay, the plant often returns.
+</p>
+<p>
+  If you hire help, ask how they handle roots, disposal, and follow-up regrowth.
+</p>
 
-      <h2>How poison ivy spreads in a yard</h2>
-      <p>
-        Poison ivy spreads through roots, runners, and seeds. Small patches can turn into larger areas over time.
-        Cutting vines can also trigger new growth if roots stay in the ground.
-      </p>
-
-      <h2>Best way to remove poison ivy safely</h2>
-      <p>
-        A safe plan reduces skin contact and limits spread. Crews use protective gear, control the work area,
-        and remove plant material without dragging it across the yard.
-      </p>
-      <p class="muted">
-        Note: If you have a rash or exposure concerns, talk with a medical professional. This page focuses on yard removal.
-      </p>
-
-      <h2>Killing poison ivy roots for long-term control</h2>
-      <p>
-        Long-term results depend on what happens below the surface. If roots remain, poison ivy can return.
-        A pro can choose a method that targets regrowth and fits the site.
-      </p>
-
-      <h2>What to do with poison ivy vines and debris</h2>
-      <p>
-        Bag and handle debris as contaminated plant material. Do not burn it.
-        Tools, gloves, and clothing can also carry oil and should be cleaned after the job.
-      </p>
-
-      <h2>When to hire professional poison ivy removal</h2>
-      <p>
-        Professional poison ivy removal makes sense for large patches, hard-to-reach areas, and properties with
-        repeat regrowth. It also helps when the plant has climbed trees or spread along fences.
-      </p>
-
+      <!-- Cost near the bottom (required) -->
       <hr />
-
-      <h2>Cost estimate</h2>
-      <p class="muted">
-        Estimated project pricing in Indianapolis, IN (most jobs):
-      </p>
-
-      <table class="table" aria-label="Cost estimate table">
-        <thead>
-          <tr>
-            <th>Service</th>
-            <th>Typical range</th>
-            <th>What moves the price</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Poison Ivy Removal</td>
-            <td>$250–$800</td>
-            <td>Patch size, access, vines in trees, disposal, repeat visits</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <p class="muted" style="margin-top:10px;">
-        These are typical ranges. A quote depends on site conditions and the removal method.
-      </p>
+<h2>Poison ivy removal cost</h2>
+<p class="muted">
+  Typical project pricing in Indianapolis, IN depends on how much ivy has spread, access, and whether it climbs trees or structures.
+</p>
+<table class="table" aria-label="Cost estimate table">
+  <thead>
+    <tr>
+      <th>Service</th>
+      <th>Typical range</th>
+      <th>What moves the price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Poison Ivy Removal</td>
+      <td>$500–$1500</td>
+      <td>Area size, root density, climbing height, disposal, repeat visits</td>
+    </tr>
+  </tbody>
+</table>
+<p class="muted" style="margin-top:10px;">
+  A site check gives the cleanest number. Quotes can change based on access and how deep the roots run.
+</p>
 
       <h2>Service area</h2>
-      <p>
-        We serve homeowners and property managers across the metro area. City pages provide local context and pricing ranges.
-      </p>
+<p>
+  We serve Indianapolis, IN and nearby neighborhoods.
+</p>
     </section>
   </div>
 </main>
 
+
 <footer>
   <div class="footer-card">
-    <h2>Ready to move forward? Request a free quote</h2>
-    <p>Tell us where the poison ivy is and how large the area is. We’ll reply with next steps.</p>
+    <h2>Ready to move forward?</h2>
+    <p>Ready to move forward? Request a free quote</p>
     <a class="btn" href="mailto:hello@example.com?subject=Free%20Quote%20Request">Get Free Estimate</a>
     <div class="small">
-      © Poison Ivy Removal Service. All rights reserved.
+      © Ivy Removal Company. All rights reserved.
       <div class="links" style="margin-top:10px;">
         <a href="/">Home</a>
       </div>
